<resources>
    <string name="app_name">Weddo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_guests">Number of Guests</string>
    <string name="total_cost">Total Cost</string>
    <string name="downpayments_payed">Downpayments Paid</string>
    <string name="left_to_pay">Left To Pay</string>
    <string name="web_page">Web Page</string>
    <string name="summary">Summary</string>
    <string name="surname">Surname:</string>
    <string name="guest">Guest</string>
    <string name="cancel">CANCEL</string>
    <string name="name">Name:</string>
    <string name="down_payment">Down Payment:</string>
    <string name="price">Price</string>
    <string name="set">SET</string>
    <string name="down_payment1">Down Payment</string>
    <string name="price1">Price:</string>
    <string name="phone">Phone:</string>
    <string name="notes_about_contact_and_such">Notes about contact and such</string>
    <string name="notes">Notes:</string>
    <string name="phone_number">Phone number</string>
    <string name="add">ADD</string>
    <string name="ok">OK</string>
    <string name="price_per_person">Price per Person:</string>

</resources>
