<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:inputType="textCapSentences"
                tools:hint="Name"
                android:freezesText="true"/>

            <Button
                android:id="@+id/btnSetName"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/set" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDownPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/down_payment"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etDownPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/down_payment1"
                android:inputType="numberDecimal"
                android:freezesText="true"/>

            <Button
                android:id="@+id/btnSetDownPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price1"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:freezesText="true"/>

            <Button
                android:id="@+id/btnSetPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:freezesText="true"/>

            <Button
                android:id="@+id/btnSetPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/etNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/notes_about_contact_and_such"
                android:inputType="textCapSentences"
                android:freezesText="true"/>

            <Button
                android:id="@+id/btnSetNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>