<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/heading"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_marginTop="20dp"
        android:id="@+id/tilName">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:inputType="textCapSentences"
            android:ems="10"
            android:hint="@string/name"
            android:id="@+id/etInputName"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilName">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:inputType="textCapSentences"
            android:ems="10"
            android:hint="@string/surname"
            android:id="@+id/etInputLastName"/>
    </android.support.design.widget.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textSize="20sp"
            android:textColor="#000"
            android:id="@+id/action_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:textColor="#000"
            android:id="@+id/action_cancel"/>
    </RelativeLayout>

</RelativeLayout>